--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-todo",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://barelysmooth.github.io/react-todo",
+  "homepage": "https://barelysmooth.dev/react-todo",
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
